gitops/platform/management-consoles/authentik-callback-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: authentik-server
  namespace: longhorn-system
subsets:
  - addresses:
      - ip: 10.97.155.74
    ports:
      - name: http
        port: 80
        protocol: TCP
