gitops/platform/management-consoles/authentik-callback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: longhorn-system
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
