gitops/platform/management-consoles/forgejo-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: forgejo
  namespace: longhorn-system
subsets:
  - addresses:
      - ip: __MGMT_HOST_IP__
    ports:
      - name: http
        port: 3001
        protocol: TCP
