gitops/platform/management-consoles/forgejo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: longhorn-system
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
  type: ClusterIP
