gitops/platform/management-consoles/proxmox-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: longhorn-system
subsets:
  - addresses:
      - ip: __PROXMOX_HOST_IP__
    ports:
      - name: https
        port: 8006
        protocol: TCP
