gitops/platform/management-consoles/proxmox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: longhorn-system
spec:
  ports:
    - name: https
      port: 8006
      protocol: TCP
      targetPort: 8006
  type: ClusterIP
