gitops/platform/management-consoles/seaweedfs-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: seaweedfs
  namespace: longhorn-system
subsets:
  - addresses:
      - ip: 192.168.2.70
    ports:
      - name: s3
        port: 8333
        protocol: TCP
      - name: filer
        port: 8888
        protocol: TCP
      - name: admin
        port: 23646
        protocol: TCP
