gitops/platform/management-consoles/twinboxwizard-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: twinboxwizard
  namespace: longhorn-system
subsets:
  - addresses:
      - ip: 192.168.2.70
    ports:
      - name: http
        port: 3000
        protocol: TCP
