gitops/platform/management-consoles/twinboxwizard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twinboxwizard
  namespace: longhorn-system
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
