gitops/platform/management-consoles/webwizard-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: webwizard
  namespace: longhorn-system
subsets:
  - addresses:
      - ip: __MGMT_HOST_IP__
    ports:
      - name: http
        port: 3000
        protocol: TCP
      - name: api
        port: 8080
        protocol: TCP
