gitops/platform/management-consoles/webwizard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webwizard
  namespace: longhorn-system
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: api
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
