gitops/platform/management-consoles/authentik-callback-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-authentik-callback
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.__ZONE_NAME__`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-authentik-callback-netbird
  namespace: longhorn-system
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`longhorn.__ZONE_NAME__`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
