gitops/platform/management-consoles/beszel-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beszel
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`beszel.__ZONE_NAME__`)
      services:
        - kind: Service
          name: beszel
          port: 8090
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beszel-netbird
  namespace: longhorn-system
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`beszel.__ZONE_NAME__`)
      services:
        - kind: Service
          name: beszel
          port: 8090
