gitops/platform/management-consoles/forgejo-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`forgejo.__ZONE_NAME__`)
      services:
        - kind: Service
          name: forgejo
          port: 3001
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-netbird
  namespace: longhorn-system
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`forgejo.__ZONE_NAME__`)
      services:
        - kind: Service
          name: forgejo
          port: 3001
