gitops/platform/management-consoles/proxmox-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`proxmox.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: proxmox
          port: 8006
          scheme: https
          serversTransport: proxmox-server-transport
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-netbird
  namespace: longhorn-system
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`proxmox.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: proxmox
          port: 8006
          scheme: https
          serversTransport: proxmox-server-transport
