gitops/platform/management-consoles/seaweedfs-admin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seaweedfs-admin
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`seaweedfs-admin.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: seaweedfs
          port: 23646
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seaweedfs-admin-netbird
  namespace: longhorn-system
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`seaweedfs-admin.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: seaweedfs
          port: 23646
