gitops/platform/management-consoles/seaweedfs-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: seaweedfs-cache-prefix
  namespace: longhorn-system
spec:
  addPrefix:
    prefix: /mastodon
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seaweedfs
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`seaweedfs.__ZONE_NAME__`) && PathPrefix(`/cache`)
      middlewares:
        - name: seaweedfs-cache-prefix
      services:
        - kind: Service
          name: seaweedfs
          port: 8333
    - kind: Rule
      match: Host(`seaweedfs.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: seaweedfs
          port: 8888
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seaweedfs-netbird
  namespace: longhorn-system
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`seaweedfs.__ZONE_NAME__`) && PathPrefix(`/cache`)
      middlewares:
        - name: seaweedfs-cache-prefix
      services:
        - kind: Service
          name: seaweedfs
          port: 8333
    - kind: Rule
      match: Host(`seaweedfs.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: seaweedfs
          port: 8888
